--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "vue-google-charts",
-  "version": "1.1.0",
+  "name": "@danny50610/vue-google-charts",
+  "version": "1.1.1-danny50610.1",
   "description": "Reactive Vue.js wrapper for Google Charts lib",
   "author": {
     "name": "Refat",
